--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
           <div class="about-descr">
             <p class="p-heading">My name is Lee Mark A. Docto and I'm a Full Stack Developer based in Philippines.</p>
-            <p class="separator">Currently working as a Assistant Development Manager. My job is to Manage, Design, Build, Develop softwares and make sure everything would be perfect.</p>
+            <p class="separator">Currently working as a Assistant Development Manager. My job is to Manage, Design, Build, Develop software and make sure everything would be perfect.</p>
           </div>
 
         </div>
