--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         <div class="col-lg-12">
 
           <div class="about-descr">
-            <p class="p-heading">My name is Lee Mark A. Docto and I'm a Full Stack Developer based in Philippines.</p>
-            <p class="separator">Currently working as a Assistant Development Manager. My job is to Manage, Design, Build, Develop software and make sure everything would be perfect.</p>
+            <p class="p-heading">My name is Lee Mark A. Docto and I am a Full Stack Developer based in Philippines.</p>
+            <p class="separator">Currently working as a Assistant Development Manager. My job is to Manage, Design, Build, Develop software and make sure everything is perfect.</p>
           </div>
 
         </div>
