--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
 
   <!-- start section header -->
   <div id="header" class="home">
-
     <div class="container">
-      <div class="header-content">
+      <!-- <div class="header-content">
         <h1>I'm <span class="typed"></span></h1>
         <p>Full Stack Developer</p>
 
@@ -72,6 +71,21 @@
           <li><a href="https://www.instagram.com/leemarkdocto/" target="_blank"><i class="ion-social-instagram"></i></a>
           </li>
         </ul>
+      </div> -->
+      <div class="row">
+        <div class="header-content">
+          <img src="images/me.png" alt="Me">
+        </div>
+        <div class="header-content">
+          <h1>I'm <span class="typed"></span></h1>
+          <p>Full Stack Developer</p>
+          <ul class="list-unstyled list-social">
+            <li><a href="https://www.linkedin.com/in/leemarkdocto" target="_blank"><i class="ion-social-linkedin"></i></a>
+            </li>
+            <li><a href="https://www.instagram.com/leemarkdocto/" target="_blank"><i class="ion-social-instagram"></i></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
@@ -85,8 +99,9 @@
         <div class="col-lg-12">
 
           <div class="about-descr">
-            <p class="p-heading">My name is Lee Mark A. Docto and I am a Full Stack Developer based in Philippines.</p>
-            <p class="separator">Currently working as a Assistant Development Manager. My job is to Manage, Design, Build, Develop software and make sure everything is perfect.</p>
+            <p class="p-heading">My name is Lee Mark A. Docto and I'm a Full Stack Developer based in Philippines.</p>
+            <p class="separator">My job is to design, build
+              and develop softwares for your needs. I love to code and I've been working since 2017.</p>
           </div>
 
         </div>
@@ -140,7 +155,7 @@
 
     <div class="container">
       <div class="section-title text-center">
-        <h2>My Portfolio</h2>
+        <h2>Portfolio</h2>
       </div>
     </div>
 
