--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 
           <div class="about-descr">
             <p class="p-heading">My name is Lee Mark A. Docto and I'm a Full Stack Developer based in Philippines.</p>
-            <p class="separator">My job is to design, build
-              and develop softwares for your needs. I love to code and I've been working since 2017.</p>
+            <p class="separator">Currently working as a Assistant Development Manager. My job is to design, build
+              and develop softwares for your needs</p>
           </div>
 
         </div>
