--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <div class="about-descr">
             <p class="p-heading">My name is Lee Mark A. Docto and I'm a Full Stack Developer based in Philippines.</p>
             <p class="separator">Currently working as a Assistant Development Manager. My job is to design, build
-              and develop softwares for your needs</p>
+              and develop softwares for your needs.</p>
           </div>
 
         </div>
