--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
         <div class="col-lg-12">
 
           <div class="about-descr">
-            <p class="p-heading">My name is Lee Mark A. Docto and I'm a Full Stack Developer based in Philippines.</p>
-            <p class="separator">Currently working as a Assistant Development Manager. My job is to design and develop softwares for your needs.</p>
+            <p class="p-heading">My name is Lee Mark A. Docto and I'm a Full Stack Developer based in the Philippines.</p>
+            <p class="separator">Currently working as an Assistant Development Manager. My job is to design and develop software for your needs.</p>
           </div>
 
         </div>
