--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="images/favicon.png">
+  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-B2Y63S91TS"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-B2Y63S91TS');
+  </script>
 </head>
 
 <body>
