--- a/index.html
+++ b/index.html
@@ -128,27 +128,21 @@
         <div class="services-block">
           <img class="img-portfolio img-responsive" src="images/1.png">
         </div>
-
         <div class="services-block">
           <img class="img-portfolio img-responsive" src="images/2.png">
         </div>
-
         <div class="services-block">
           <img class="img-portfolio img-responsive" src="images/3.png">
         </div>
-
         <div class="services-block">
           <img class="img-portfolio img-responsive" src="images/4.png">
         </div>
-
         <div class="services-block">
           <img class="img-portfolio img-responsive" src="images/5.png">
         </div>
-
         <div class="services-block">
           <img class="img-portfolio img-responsive" src="images/6.png">
         </div>
-
         <div class="services-block">
           <img class="img-portfolio img-responsive" src="images/7.png">
         </div>
@@ -173,54 +167,35 @@
         <div class="col-md-12">
 
           <div class="portfolio-list">
-
             <ul class="nav list-unstyled" id="portfolio-flters">
               <li class="filter filter-active" data-filter=".all">all</li>
-              <li class="filter" data-filter=".webdesign">Website</li>
-              <li class="filter" data-filter=".posters">Poster</li>
+              <li class="filter" data-filter=".website">Website</li>
+              <li class="filter" data-filter=".webapp">Web Application</li>
             </ul>
-
           </div>
-
           <div class="portfolio-container">
-
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all webdesign">
-              <a class="popup-img" href="images/portfolio/1.png">
-                <img src="images/portfolio/1.png" alt="img">
-              </a>
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all website">
+              <img src="images/portfolio/mugcrater.jpeg" alt="img"><br></br>
+              <h4>Mugcrater - <a href="https://mugcrater.github.io/" target="_blank">Live Preview</a></h4>
             </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all posters">
-              <a class="popup-img" href="images/portfolio/2.png">
-                <img src="images/portfolio/2.png" alt="img">
-              </a>
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all webapp">
+              <img src="images/portfolio/e-commerce.png" alt="img">
+              <h4>Bubble.io E-Commerce - <a href="https://e-commerceplatform.bubbleapps.io/version-test/" target="_blank">Live Preview</a></h4>
             </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all posters">
-              <a class="popup-img" href="images/portfolio/3.png">
-                <img src="images/portfolio/3.png" alt="img">
-              </a>
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all website">
+              <img src="images/portfolio/portfolio.png" alt="img"><br></br>
+              <h4>Portfolio - <a href="https://robertandren.github.io/" target="_blank">Live Preview</a></h4>
             </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all webdesign">
-              <a class="popup-img" href="images/portfolio/4.png">
-                <img src="images/portfolio/4.png" alt="img">
-              </a>
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all website">
+              <img src="images/portfolio/escape.jpeg" alt="img"><br></br>
+              <h4>Escape - <a href="https://leemarkdocto.github.io/escapev2/" target="_blank">Live Preview</a></h4>
             </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all posters">
-              <a class="popup-img" href="images/portfolio/5.png">
-                <img src="images/portfolio/5.png" alt="img">
-              </a>
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all website">
+              <img src="images/portfolio/pasco.jpeg" alt="img"><br></br>
+              <h4>Pasco - <a href="https://leemarkdocto.github.io/pascov4/" target="_blank">Live Preview</a></h4>
             </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all webdesign">
-              <a class="popup-img" href="images/portfolio/6.png">
-                <img src="images/portfolio/6.png" alt="img">
-              </a>
-            </div>
-
           </div>
+
         </div>
       </div>
     </div>
