--- a/index.html
+++ b/index.html
@@ -177,22 +177,27 @@
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all website">
               <img src="images/portfolio/mugcrater.jpeg" alt="img"><br></br>
               <h4>Mugcrater - <a href="https://mugcrater.github.io/" target="_blank">Live Preview</a></h4>
+              <p>HTML, CSS and JavaScript</p>
             </div>
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all webapp">
               <img src="images/portfolio/e-commerce.png" alt="img">
               <h4>Bubble.io E-Commerce - <a href="https://e-commerceplatform.bubbleapps.io/version-test/" target="_blank">Live Preview</a></h4>
+              <p>Bubble.io, JavaScript and Stripe API</p>
             </div>
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all website">
               <img src="images/portfolio/portfolio.png" alt="img"><br></br>
               <h4>Portfolio - <a href="https://robertandren.github.io/" target="_blank">Live Preview</a></h4>
+              <p>HTML, CSS and JavaScript</p>
             </div>
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all website">
               <img src="images/portfolio/escape.jpeg" alt="img"><br></br>
               <h4>Escape - <a href="https://leemarkdocto.github.io/escapev2/" target="_blank">Live Preview</a></h4>
+              <p>HTML, CSS and JavaScript</p>
             </div>
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all website">
               <img src="images/portfolio/pasco.jpeg" alt="img"><br></br>
               <h4>Pasco - <a href="https://leemarkdocto.github.io/pascov4/" target="_blank">Live Preview</a></h4>
+              <p>HTML, CSS and JavaScript</p>
             </div>
           </div>
 
