--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
               <p class="no-margin">HTML, CSS and JavaScript</p>
             </div>
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all webapp">
-              <img src="images/portfolio/e-commerce.png" alt="img">
+              <img src="images/portfolio/e-commerce.png" alt="img"><br></br>
               <h4>Bubble.io E-Commerce - <a href="https://e-commerceplatform.bubbleapps.io/version-test/" target="_blank">Live Preview</a></h4>
               <p class="no-margin">Bubble.io, JavaScript and Stripe API</p>
             </div>
@@ -198,6 +198,11 @@
               <img src="images/portfolio/pasco.jpeg" alt="img"><br></br>
               <h4>Pasco - <a href="https://leemarkdocto.github.io/pascov4/" target="_blank">Live Preview</a></h4>
               <p class="no-margin">HTML, CSS and JavaScript</p>
+            </div>
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all webapp">
+              <img src="images/portfolio/dashboard.png" alt="img"><br></br>
+              <h4>Bubble.io Dashboard - <a href="https://dashboard-35808.bubbleapps.io/version-test/login" target="_blank">Live Preview</a></h4>
+              <p class="no-margin">Bubble.io</p>
             </div>
           </div>
 
