--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             </div>
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all webapp">
               <img src="images/portfolio/e-commerce.png" alt="img"><br></br>
-              <h4>Bubble.io E-Commerce - <a href="https://e-commerceplatform.bubbleapps.io/version-test/" target="_blank">Live Preview</a></h4>
+              <h4>E-Commerce - <a href="https://e-commerceplatform.bubbleapps.io/version-test/" target="_blank">Live Preview</a></h4>
               <p class="no-margin">Bubble.io, JavaScript and Stripe API</p>
             </div>
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all website">
@@ -201,7 +201,7 @@
             </div>
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all webapp">
               <img src="images/portfolio/dashboard.png" alt="img"><br></br>
-              <h4>Bubble.io Dashboard - <a href="https://dashboard-35808.bubbleapps.io/version-test/login" target="_blank">Live Preview</a></h4>
+              <h4>Dashboard - <a href="https://dashboard-35808.bubbleapps.io/version-test/login" target="_blank">Live Preview</a></h4>
               <p class="no-margin">Bubble.io</p>
             </div>
           </div>
