--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
               <li class="filter filter-active" data-filter=".all">all</li>
               <li class="filter" data-filter=".website">Website</li>
               <li class="filter" data-filter=".webapp">Web Application</li>
+              <li class="filter" data-filter=".plugin">Plug-Ins</li>
             </ul>
           </div>
           <div class="portfolio-container">
@@ -203,6 +204,11 @@
               <img src="images/portfolio/dashboard.png" alt="img"><br></br>
               <h4>Dashboard - <a href="https://dashboard-35808.bubbleapps.io/version-test/login" target="_blank">Live Preview</a></h4>
               <p class="no-margin">Bubble.io</p>
+            </div>
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all plugin">
+              <img src="images/portfolio/autorefresh.png" alt="img"><br></br>
+              <h4>Auto Refresh - <a href="https://mugcraterplugin.bubbleapps.io/version-test/overview/1693920981205x402694261782609900" target="_blank">Live Preview</a></h4>
+              <p class="no-margin">Bubble.io and JavaScript</p>
             </div>
           </div>
 
