--- a/index.html
+++ b/index.html
@@ -215,6 +215,11 @@
               <h4>Documentation</h4>
               <p class="no-margin">Bubble.io</p>
             </div>
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all website">
+              <img src="images/portfolio/friendlyfishpoker.jpg" alt="img"><br></br>
+              <h4>Friendly Fish Poker</h4>
+              <p class="no-margin">HTML, CSS and JavaScript</p>
+            </div>
           </div>
 
         </div>
