--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
         <div class="header-content">
           <h1>I'm <span class="typed"></span></h1>
-          <p>Full Stack Developer</p>
+          <p>Full-Stack Developer</p>
           <ul class="list-unstyled list-social">
             <li><a href="https://www.linkedin.com/in/leemarkdocto" target="_blank"><i class="ion-social-linkedin"></i></a>
             </li>
@@ -109,8 +109,8 @@
         <div class="col-lg-12">
 
           <div class="about-descr">
-            <p class="p-heading">My name is Lee Mark A. Docto and I'm a Full Stack Developer.</p>
-            <p class="separator">Currently working as a Development Manager. My job is to design and develop software for your needs.</p>
+            <p class="p-heading">My name is Lee Mark A. Docto and I'm a Full-Stack Developer.</p>
+            <p class="separator">My job is to design and develop software for your needs.</p>
           </div>
 
         </div>
