--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
           <div class="about-descr">
             <p class="p-heading">My name is Lee Mark A. Docto and I'm a Full-Stack Developer.</p>
-            <p class="separator">My job is to design and develop software for your needs.</p>
+            <p class="separator">My job is to design and develop Web Applications for your needs.</p>
           </div>
 
         </div>
