--- a/index.html
+++ b/index.html
@@ -175,6 +175,10 @@
             </ul>
           </div>
           <div class="portfolio-container">
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all webapp">
+              <img src="images/portfolio/kidly.png" alt="img"><br></br>
+              <h4>Kidly - <a href="https://kidly.app" target="_blank">Live Preview</a></h4>
+            </div>
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all website">
               <img src="images/portfolio/mugcrater.jpeg" alt="img"><br></br>
               <h4>Mugcrater - <a href="https://mugcrater.github.io/" target="_blank">Live Preview</a></h4>
