--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </div> -->
       <div class="row">
         <div class="header-content">
-          <img src="images/me.png" alt="Me">
+          <img src="images/me.jpg" alt="Me">
         </div>
         <div class="header-content">
           <h1>I'm <span class="typed"></span></h1>
