--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </div>
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all website">
               <img src="images/portfolio/mugcrater.jpeg" alt="img"><br></br>
-              <h4>Mugcrater - <a href="https://mugcrater.github.io/" target="_blank">Live Preview</a></h4>
+              <h4>Mugcrater - <a href="https://mugcrater.com/" target="_blank">Live Preview</a></h4>
               <p class="no-margin">HTML, CSS and JavaScript</p>
             </div>
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all webapp">
